--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1155,13 +1155,13 @@ textarea.form-input::-webkit-resizer { display: none; }
 .form-input:focus:invalid { border-color: var(--bittersweet-shimmer); }
 
 .form-btn {
-  position: relative;
+  position: left;
   width: 100%;
   background: var(--border-gradient-onyx);
   color: var(--orange-yellow-crayola);
   display: flex;
-  justify-content: center;
-  align-items: center;
+  justify-content: left;
+  align-items: left;
   gap: 10px;
   padding: 13px 20px;
   border-radius: 14px;
@@ -1174,7 +1174,7 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 .form-btn::before {
   content: "";
-  position: absolute;
+  position: left;
   inset: 1px;
   background: var(--bg-gradient-jet);
   border-radius: inherit;
